[package]
name = "courses"
version = "0.7.0"
edition = "2021"
license = "GPL-3.0-or-later"

authors = ["Anton Mølbjerg Eskildsen"]

description = "A publishing system for interactive content"

homepage = "https://coursesproject.github.io/courses/"
repository = "https://github.com/coursesproject/courses"
readme = "README.md"

keywords = ["site", "generator", "publishing", "notebooks", "education"]
categories = ["command-line-utilities"]

[workspace]

members = [
    "cdoc"
]

[lib]
name = "courses"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdoc = { path = "cdoc", version = "0.5.3" }

# Serialization and templating
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_yaml = { version = "0.9.13"}
serde_json = "1.0.95"
toml = "0.7.3"
tera = "1.17.1"
syntect = "5.0.0"

# Utilities and error handling
rust-embed = "6.4.2"
fs_extra = "1.2.0"
thiserror = { version = "1.0.37" }
anyhow = { version = "1.0.65", features=["backtrace"] }
beau_collector = "0.2.1"
linked-hash-map = {version="0.5.6", features=["serde_impl"]}
image = "0.24.6"
base64-simd = "0.8.0"
lazy_static = "1.4.0"


# CLI libraries
inquire = "0.6.2"
clap = { version = "4.0.0-rc.2", features = ["derive"] }
console = "0.15.2"
indicatif = {version="0.17.2", features=["rayon"]}


# Async + server stuff
penguin = "0.1.7"
tokio = { version = "1.21.2", features = ["macros", "rt"] }
pollster = { version = "0.3.0", features = ["macro"]}
notify = { version = "6.0.0" }
notify-debouncer-mini = "0.3.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
zip = "0.6.3"
rayon = "1.7.0"

tempfile = "3.3.0"