[package]
name = "courses"
version = "0.10.0-alpha"
edition = "2021"
license = "GPL-3.0-or-later"

authors = ["Anton Mølbjerg Eskildsen"]

description = "A publishing system for interactive content"

homepage = "https://coursesproject.github.io/courses/"
repository = "https://github.com/coursesproject/courses"
readme = "README.md"

keywords = ["website-generator", "publishing", "notebooks", "markdown", "education"]
categories = ["command-line-utilities"]

build="build.rs"

exclude = [
    "applications/*",
    "docs/*",
    "extensions/*"
]

[workspace]

members = [
    "crates/*",
]

[lib]
name = "courses"
path = "src/lib.rs"

[profile.release]
debug = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
cdoc-base = {path = "crates/cdoc-base", version = "0.10.0-alpha"}
cdoc-parser = { path = "crates/cdoc-parser", version = "0.10.0-alpha" }
cdoc = { path = "crates/cdoc", version = "0.10.0-alpha" }

# Serialization and templating
serde = { version = "1.0.145", features = ["derive", "rc"] }
serde_yaml = { version = "0.9.13"}
serde_json = "1.0.95"
toml = "0.7.3"
syntect = "5.0.0"
minijinja = { version = "1.0.11", features = ["builtins"] }

# Utilities and error handling
rust-embed = "6.4.2"
fs_extra = "1.2.0"
thiserror = { version = "1.0.37" }
anyhow = { version = "1.0.65", features=["backtrace"] }
linked-hash-map = {version="0.5.6", features=["serde_impl"]}
image = "0.24.6"
base64-simd = "0.8.0"
lazy_static = "1.4.0"
semver = { version="1.0.18", features = ["serde"] }
cowstr = {version = "1.2.0", features = ["serde"]}
dyn-clone = "1.0.16"


# CLI libraries
inquire = "0.6.2"
clap = { version = "4.0.0-rc.2", features = ["derive"] }
console = "0.15.2"
indicatif = {version="0.17.2", features=["rayon"]}


# Async + server stuff
penguin = {version = "0.1.7", optional = true}
tokio = { version = "1.21.2", features = ["macros", "rt"], optional = true }
pollster = { version = "0.3.0", features = ["macro"], optional = true}
notify = { version = "6.0.0", optional = true }
notify-debouncer-mini = { version = "0.4.1", optional = true }
reqwest = { version = "0.11.13", features = ["blocking"] }
bytes = {version = "1.5.0"}
zip = "0.6.3"
rayon = "1.7.0"
blake3 = {version = "1.5.0", features = ["serde"]}

tempfile = "3.3.0"

[build-dependencies]
built = "0.7.0"

[features]
default = ["server"]

server = ["dep:tokio", "dep:penguin", "dep:notify", "dep:notify-debouncer-mini"]
no-server = ["dep:pollster"]