[package]
name = "cdoc"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"

authors = ["Anton Mølbjerg Eskildsen"]

description = "A markdown-based document parser and processor"

homepage = "https://antonmeskildsen.github.io/courses/"
repository = "https://github.com/antonmeskildsen/courses/tree/main/cdoc"
documentation = "https://docs.rs/cdoc/0.1.1/cdoc/"
readme = "README.md"

keywords = ["generator", "markdown", "notebooks"]
categories = ["command-line-utilities"]


[lib]
name = "cdoc"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = "1.0.150"
serde_json = "1.0.89"
serde_yaml = "0.9.14"
serde_with = "2.1.0"
toml = "0.7.2"
typetag = "0.2.3"

# Parsing / formatting
tera = "1.17.1"
pulldown-cmark = "0.9.2"
base64 = "0.21.0"
katex = {version="0.4.6", default_features=false, features=["quick-js"], optional=true}
pest = "2.5.1"
pest_derive = "2.5.1"

# Utilities
thiserror = "1.0.37"
anyhow = "1.0.66"
dyn-clone = "1.0.10"

clap = {version="4.0.29", optional=true}

[features]
build-binary = ["clap"]

