[package]
name = "cdoc"
version = "0.5.3"
edition = "2021"
license = "GPL-3.0-or-later"

authors = ["Anton Mølbjerg Eskildsen"]

description = "A markdown-based document parser and processor"

homepage = "https://coursesproject.github.io/courses/"
repository = "https://github.com/coursesproject/courses/tree/main/cdoc"
documentation = "https://docs.rs/cdoc/0.1.1/cdoc/"
readme = "README.md"

keywords = ["generator", "markdown", "notebooks"]
categories = ["command-line-utilities"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false


[lib]
name = "cdoc"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = "1.0.150"
serde_json = "1.0.89"
serde_yaml = "0.9.14"
serde_with = "2.1.0"
toml = "0.7.2"
typetag = "0.2.3"

# Parsing / formatting
tera = "1.17.1"
pulldown-cmark = {version="0.9.2", features=["serde"]}
base64 = "0.21.0"
pest = "2.5.1"
pest_derive = "2.5.1"
syntect = "5.0.0"
regex = "1.8.1"

# Utilities
thiserror = "1.0.37"
anyhow = "1.0.66"
dyn-clone = "1.0.10"
lazy_static = "1.4.0"
walkdir = "2.3.3"
image = "0.24.6"
replace_with = "0.1.7"

rhai = {version="1.13.0", features=["serde"]}

clap = {version="4.0.29", features=["derive"]}



