[package]
name = "cdoc-base"
version = "0.10.0-alpha"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"

serde = {version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
linked-hash-map = {version = "0.5.6", features = ["serde_impl"]}

semver = {version = "1.0.19", features = ["serde"]}

minijinja = {version = "1.0.10", features = ["loader"]}

xml-rs = {version = "0.8.19", optional = true}

#rhai = {version = "1.16.2", features = ["internals"]}

[features]
default = ["xml-rs"]
#wasm = ["rhai/wasm-bindgen"]
wasm = []