[package]
name = "cdoc"
version = "0.8.0-beta.1"
edition = "2021"
license = "GPL-3.0-or-later"

authors = ["Anton Mølbjerg Eskildsen"]

description = "A markdown-based document parser and processor"

homepage = "https://coursesproject.github.io/courses/"
repository = "https://github.com/coursesproject/courses/tree/main/cdoc"
readme = "README.md"

keywords = ["generator", "markdown", "notebooks"]
categories = ["command-line-utilities"]

[lib]
name = "cdoc"
path = "src/lib.rs"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
cdoc-parser = { path = "../cdoc-parser", version = "=0.1.0-beta.1", features = ["scripting"] }

# Serialization
serde = "1.0.150"
serde_json = "1.0.89"
serde_yaml = "0.9.14"
serde_with = "3.0.0"
toml = "0.7.2"
typetag = "0.2.3"
yaml-front-matter = "0.1.0"

# Parsing / formatting
tera = "1.17.1"
pulldown-cmark = { version = "0.9.2", features = ["serde"] }
base64 = "0.21.0"
pest = "2.5.1"
pest_derive = "2.5.1"
regex = "1.8.1"

# Utilities
thiserror = "1.0.37"
anyhow = "1.0.66"
dyn-clone = "1.0.10"
lazy_static = "1.4.0"
walkdir = "2.3.3"
include_dir = "0.7.3"
dirs = "5.0.1"
linked-hash-map = {version = "0.5.6", features = ["serde_impl"]}
nanoid = "0.4.0"
cowstr = {version = "1.2.0", features = ["serde"]}


rhai = { version = "1.13.0", features = ["serde", "metadata", "internals", "sync"] }
reqwest = { version = "0.11.18", features = ["blocking"] }

clap = { version = "4.0.29", features = ["derive"] }



