[package]
name = "base"
version = "0.1.0"
edition = "2021"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
extism-pdk = "0.3.4"
serde = {version = "1.0.188", features = ["derive"]}

getrandom = {version = "0.2.10", features = ["js"]}
cdoc-base = {path = "../../crates/cdoc-base", version = "0.1.0", features = ["wasm"]}
anyhow = "1.0.75"